<resources>
    <string name="app_name">LAMISPlus</string>
    <string name="dbname">lamisplus.db</string>
    <string name="aadbname">dbname.db</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_location">Location</string>
    <string name="action_submit">Submit</string>
    <string name="version">Version 1.0.3</string>
    <string name="error_email_subject_app_crashed">LamisPlus Mobile android app crashed</string>
    <string name="choose_a_email_client">Choose an Email client :</string>
    <string name="dashboard_icon_label">Dashboard</string>
    <string name="app_icon_label">App</string>
    <string name="settings_icon_label">Settings</string>
    <string name="logout_icon_label">Logout</string>
    <string name="my_clients_label">My Clients</string>
    <string name="hts_label">HTS</string>
    <string name="appointments_label">Appointments</string>
    <string name="unsuppressed_clients_label">Unsuppressed Clients</string>
    <string name="interrupted_treatment_label">Interrupted Treatment</string>
    <string name="viral_load_suppression_label">Viral Load Suppression</string>
    <string name="covid19_vaccination_label">Covid 19 Vaccination</string>
    <string name="app_search_icon_label">Search Patients</string>
    <string name="app_create_icon_label">Create Patient</string>
    <string name="app_synced_status_label">Synced Status</string>
    <string name="app_commodity_label">Commodity</string>
    <string name="preferences">Preferences</string>
    <string name="app_find_patient_icon_label">Find Patient</string>
    <string name="delete">Delete</string>
    <string name="search_patient_hint">Patient name</string>
    <string name="action_add_patients">Add Patients</string>
    <string name="search_patient_no_results">No patients exist in database</string>
    <string name="connect_to_server">Connect To Server</string>
    <string name="find_patient_server">Find/Download Patient From Server</string>
    <string name="find_patient_with_no_biometrics_server">Find Patients With No Biometrics</string>
    <string name="find_patient_with_biometrics_server">Find Patients With Biometrics</string>
    <string name="patient_program_label">Patient Program</string>
    <string name="testing_services_label">Testing Services</string>
    <string name="treatment_services_label">Treatment Services</string>
    <string name="pmtct_label">PMTCT</string>
    <string name="lamisplus_logo">LamisPlus logo</string>
    <string name="crash_dialog_title">Error occurred</string>
    <string name="crash_dialog_message">Sorry ! An Unknown error has occurred and it has been logged in this device. Please send a log report details to the developer(s) so that it can be resolved as soon as possible.</string>
    <string name="crash_dialog_positive_button">Restart</string>
    <string name="crash_dialog_negative_button">Close</string>
    <string name="crash_dialog_neutral_button">Send report and restart</string>
    <string name="login_offline">Offline</string>
    <string name="login_button">Login</string>
    <string name="unable_to_login">Unable to login?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="patient_dashboard">Patient Dashboard</string>
    <string name="create_patient">Create Patient</string>
    <string name="action_synchronize_patients">Synchronizing patient</string>
    <string name="synchronize_patient_network_error">Cannot synchronize in offline mode</string>
    <string name="fab_label_update">Update</string>
    <string name="action_update_patient_data">Update Patient</string>
    <string name="fab_label_delete">Delete</string>
    <string name="patient_scroll_tab_details_label">Details</string>
    <string name="patient_scroll_tab_formdetails_label">Form Details</string>
    <string name="patient_scroll_tab_fingerprints_label">Fingerprints</string>
    <string name="patient_pmtct_followup_visit_label">Follow Up Visit</string>
    <string name="patient_photo">Patient Photo</string>
    <string name="patient_identifier"># %1$s</string>
    <string name="patient_details_full_name_label">Full Name</string>
    <string name="patient_details_photo_label">Photo</string>
    <string name="patient_details_gender_label">Gender</string>
    <string name="patient_details_birth_date_label">Birth date</string>
    <string name="patient_details_phone_label">Phone number</string>
    <string name="patient_contact_info_label">Contact Information</string>
    <string name="patient_information_label">Patient Information</string>
    <string name="patient_address_label">Address</string>
    <string name="patient_city_label">City</string>
    <string name="patient_postal_label">Postal Code</string>
    <string name="patient_state_label">State</string>
    <string name="patient_lga_label">LGA</string>
    <string name="patient_ward_label">Ward/Community</string>
    <string name="patient_country_label">Country</string>
    <string name="patient_photo_edit">Update photo</string>
    <string name="date_picker_title">Select Date</string>
    <string name="date_picker_title_expiry">Select Expiry Date</string>
    <string name="rst_form">Risk Stratification Form</string>
    <string name="client_intake_form">Client Intake Form</string>
    <string name="pre_test_form">Pre Test Form</string>
    <string name="request_result_form">Request &amp; Result Form</string>
    <string name="post_test_form">Post Test Form</string>
    <string name="recency_form">Recency Form</string>
    <string name="elicitation">Index Notification Services - Elicitation</string>
    <string name="anc_form">ANC Form</string>
    <string name="pmtct_enrollment_form">PMTCT Enrollment Form</string>
    <string name="labour_delivery_form">Labour &amp; Delivery Form</string>
    <string name="infant_registration_form">Infant Registration Form</string>
    <string name="partners_form">Partners Form</string>
    <string name="sync">Sync</string>
    <string name="sync_on">Sync on</string>
    <string name="sync_off">Sync off</string>
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="disconn_server">Disconnecting from server</string>
    <string name="reconn_server">Reconnecting to server</string>
    <string name="connected_to_server_message">You are now connected!</string>
    <string name="toast_with_black_background">Toast with black background</string>
    <string name="activity_no_internet_connection">No internet connection. Patient Registration </string>
    <string name="activity_sync_after_connection">will sync when internet connection is restored. </string>
    <string name="dialog_title_are_you_sure">Are you sure?</string>
    <string name="dialog_message_data_lost">All patient information entered will be lost.</string>
    <string name="dialog_button_stay">Stay</string>
    <string name="dialog_button_leave">Leave</string>
    <string name="capture">Capture</string>
    <string name="init">Initialize</string>
    <string name="ledon">LED</string>
    <string name="ledoff">LED Off</string>
    <string name="sdktest">SDK Test</string>
    <string name="toggle_led">Toggle LED</string>
    <string name="match">Verify</string>
    <string name="SaveFingerPrint">Save</string>
    <string name="DeleteFingerPrint">Clear Prints</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="cb_matched">Match</string>
    <string name="cb_scenabled">SC En</string>
    <string name="auto_on">Auto On</string>
    <string name="smart_capture">Smart Capture</string>
    <string name="smart_capture_on">Smart Cap ON</string>
    <string name="smart_capture_off">Smart Cap OFF</string>
    <string name="auto_on_enabled">AutoOn ON</string>
    <string name="auto_on_disabled">AutoOn OFF</string>
    <string name="capture_mode_n_on">Mode N ON</string>
    <string name="capture_mode_n_off">Mode N OFF</string>
    <string name="NFIQ_enabled">NFIQ ON</string>
    <string name="NFIQ_disabled">NFIQ OFF</string>
    <string name="usb_bulk_mode_64_on">USB Bulk 64 ON</string>
    <string name="usb_bulk_mode_64_off">USB Bulk 64 OFF</string>
    <string name="fingerprint_capture_image">Fingerprint capture image</string>
    <string name="fingerprint_register_image">Fingerprint register image</string>
    <string name="fingerprint_verify_image">Fingerprint verify image</string>
    <string name="secugen_device_image">SecuGen device image</string>
    <string name="read_serial_number">Read S/N</string>
    <string name="set_brightness_0">Set Brightness 0</string>
    <string name="set_brightness_100">Set Brightness 100</string>
    <string name="log">Log</string>
    <string name="action_patient_pbs">Patient Biometrics</string>
    <string name="test_connection">Test Connection</string>
    <string name="about_dialog_title">About Neurotechnology</string>
    <string name="msg_another_task_in_progress">Another task is in progress at the moment</string>
    <string name="msg_about_company">Neurotechnology</string>
    <string name="msg_camera_is_not_available">Camera is not available</string>
    <string name="msg_could_not_create_directory">Could not create directory</string>
    <string name="msg_crash_notif_title">Biometrics has crashed…</string>
    <string name="msg_enter_id">Please enter user ID:</string>
    <string name="msg_error">Error</string>
    <string name="msg_error_opening_file">Error opening file</string>
    <string name="msg_extract">Extract</string>
    <string name="msg_id_requirements">User id must be non-empty and unique</string>
    <string name="msg_initializing">Initializing…</string>
    <string name="msg_initializing_client">Initializing client…</string>
    <string name="msg_copying_resources">Copying resources…</string>
    <string name="msg_load">Load</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_name_empty">Template must have a name</string>
    <string name="msg_no_such_id">There is no candidate with such id</string>
    <string name="msg_not_valid_id">Entered id is not valid!</string>
    <string name="msg_name_exists">The specified name is already in use. Please enter a different name.</string>
    <string name="msg_no_records_in_database">There are no records in the database</string>
    <string name="msg_no_record_loaded">No record loaded</string>
    <string name="msg_retry">Retry</string>
    <string name="msg_ready">Ready</string>
    <string name="msg_found">Found</string>
    <string name="msg_not_found">Not found</string>
    <string name="msg_smile">Smile</string>
    <string name="msg_database">Database</string>
    <string name="msg_capturing_device_is_unavailable">Please make sure the capturing device is plugged in</string>
    <string name="msg_processing">Processing...</string>
    <string name="msg_no_device_selected">No device selected</string>
    <string name="msg_metadata">Metadata</string>
    <string name="msg_score">Score</string>
    <string name="msg_name">Name</string>
    <string name="msg_user_name">User name</string>
    <string name="msg_user_id">User id</string>
    <string name="menu_about">About</string>
    <string name="menu_database">Database</string>
    <string name="menu_activation">Activation</string>
    <string name="menu_licensing">Licensing</string>
    <string name="menu_connection">Connection</string>
    <string name="msg_again">Again</string>
    <string name="msg_repeat">Repeat</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="enrolment_amp_follow_up_card_1"><![CDATA[Enrolment & Follow up Card 1]]></string>
    <string name="enrolment_amp_follow_up_card_2"><![CDATA[Enrolment & Follow up Card 2]]></string>
</resources>