<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/half_rounded" />

            <TextView
                android:id="@+id/your_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/hepatitis"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <View
                android:id="@+id/fav_view"
                android:layout_width="30dp"
                android:layout_height="5dp"
                android:layout_below="@id/your_favorite"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_search" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="90dp"
                android:layout_marginRight="10dp"
                android:elevation="50dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mEnrolFollowUpCard1View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_search"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/mEnrolFollowUpCard1Button"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/item_recommended_titles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="start"
                        android:text="@string/enrolment_amp_follow_up_card_1"
                        android:textColor="@color/dark_late_gray" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/mEnrolFollowUpCard2View"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_search"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/mEnrolFollowUpCard2Button"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/item_recommended_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/nunito_bold"
                        android:gravity="start"
                        android:text="@string/enrolment_amp_follow_up_card_2"
                        android:textColor="@color/dark_late_gray" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>
