<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    tools:context=".activities.patientprofile.PatientProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/half_rounded" />

                <TextView
                    android:id="@+id/your_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="PMTCT Services"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="5dp"
                    android:layout_below="@id/your_profile"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/bg_search" />



            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/bg_search"
                android:elevation="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lvAncFormView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="30dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form" />

                        <TextView
                            android:id="@+id/tvAnc"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:textColor="@color/black"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:gravity="center_vertical"
                            android:hint="@string/anc_form" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/light_gray" />

                    <LinearLayout
                        android:id="@+id/lvPmtctEnrollmentFormView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form" />

                        <TextView
                            android:id="@+id/tvPmtctEnrollmentForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:textColor="@color/grey"
                            android:gravity="center_vertical"
                            android:text="@string/pmtct_enrollment_form" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/light_gray" />

                    <LinearLayout
                        android:id="@+id/lvLabourDeliveryFormView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="15dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="15dp">

                        <ImageView
                            android:id="@+id/genderImage"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form"/>

                        <TextView
                            android:id="@+id/tvLabourDeliveryForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:gravity="center_vertical"
                            android:text="@string/labour_delivery_form" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/light_gray" />

                    <LinearLayout
                        android:id="@+id/lvInfantInformationFormView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="15dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="15dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form" />

                        <TextView
                            android:id="@+id/tvInfantInformationForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:gravity="center_vertical"
                            android:text="@string/infant_registration_form" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/light_gray" />

                    <LinearLayout
                        android:id="@+id/lvPartnersFormView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="15dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="15dp">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_form" />

                        <TextView
                            android:id="@+id/tvPartnersForm"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="15dp"
                            android:layout_marginLeft="15dp"
                            android:textColor="@color/grey"
                            android:fontFamily="@font/nunito_semi_bold"
                            android:gravity="center_vertical"
                            android:text="@string/partners_form" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>